--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "17.2.2",
     "@fortawesome/fontawesome-free": "6.5.1",
     "bootstrap": "5.3.3",
+    "date-fns": "3.3.1",
     "rxjs": "7.8.1",
     "tslib": "2.6.2",
     "zone.js": "0.14.4"
