feat: update ng

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,8 +15,7 @@
         "plugin:@angular-eslint/recommended",
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
-        "plugin:prettier/recommended",
-        "plugin:deprecation/recommended"
+        "plugin:prettier/recommended"
       ],
       "rules": {
         "@angular-eslint/component-selector": [
