--- a/package.json
+++ b/package.json
@@ -15,54 +15,48 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "17.2.2",
-    "@angular/common": "17.2.2",
-    "@angular/compiler": "17.2.2",
-    "@angular/core": "17.2.2",
-    "@angular/forms": "17.2.2",
-    "@angular/platform-browser": "17.2.2",
-    "@angular/router": "17.2.2",
-    "@fortawesome/fontawesome-free": "6.5.1",
+    "@angular/animations": "19.0.0",
+    "@angular/common": "19.0.0",
+    "@angular/compiler": "19.0.0",
+    "@angular/core": "19.0.0",
+    "@angular/forms": "19.0.0",
+    "@angular/platform-browser": "19.0.0",
+    "@angular/router": "19.0.0",
+    "@fortawesome/fontawesome-free": "6.7.0",
     "bootstrap": "5.3.3",
-    "date-fns": "3.3.1",
+    "date-fns": "4.1.0",
     "rxjs": "7.8.1",
-    "tslib": "2.6.2",
-    "zone.js": "0.14.4"
+    "tslib": "2.8.1",
+    "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.2.1",
-    "@angular-eslint/builder": "17.2.0",
-    "@angular-eslint/eslint-plugin": "17.2.0",
-    "@angular-eslint/eslint-plugin-template": "17.2.0",
-    "@angular-eslint/schematics": "17.2.0",
-    "@angular-eslint/template-parser": "17.2.0",
-    "@angular/cli": "17.2.1",
-    "@angular/compiler-cli": "17.2.2",
-    "@angular/localize": "17.2.2",
-    "@angular/platform-browser-dynamic": "17.2.2",
-    "@cypress/schematic": "2.5.1",
+    "@angular-devkit/build-angular": "19.0.0",
+    "@angular/cli": "19.0.0",
+    "@angular/compiler-cli": "19.0.0",
+    "@angular/localize": "19.0.0",
+    "@angular/platform-browser-dynamic": "19.0.0",
+    "@cypress/schematic": "2.5.2",
     "@types/jasmine": "5.1.4",
-    "@typescript-eslint/eslint-plugin": "6.18.0",
-    "@typescript-eslint/parser": "6.18.0",
-    "cypress": "13.6.6",
-    "eslint": "^8.56.0",
+    "angular-eslint": "18.4.1",
+    "cypress": "13.15.2",
+    "eslint": "8.57.1",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-deprecation": "2.0.0",
-    "eslint-plugin-prettier": "5.1.3",
-    "jasmine-core": "5.1.2",
-    "karma": "6.4.2",
+    "eslint-plugin-prettier": "5.2.1",
+    "jasmine-core": "5.4.0",
+    "karma": "6.4.4",
     "karma-chrome-launcher": "3.2.0",
     "karma-coverage": "2.2.1",
-    "karma-firefox-launcher": "2.1.2",
+    "karma-firefox-launcher": "2.1.3",
     "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "2.1.0",
     "karma-json-reporter": "1.2.1",
     "karma-mocha-reporter": "2.2.5",
     "mochawesome": "7.1.3",
     "mochawesome-merge": "4.3.0",
-    "ng2ninja": "4.0.1",
-    "prettier": "3.2.5",
-    "typescript": "5.2.2"
+    "ng2ninja": "5.0.0",
+    "prettier": "3.3.3",
+    "typescript": "5.6.3",
+    "typescript-eslint": "8.15.0"
   },
   "prettier": {
     "printWidth": 140,
