--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "date-fns": "4.1.0",
     "rxjs": "7.8.1",
     "tslib": "2.8.1",
+    "webstomp-client": "1.2.6",
     "zone.js": "0.15.0"
   },
   "devDependencies": {
